test/positive/i254-redefinition.cfr
// http://gsd.uwaterloo.ca:8888/question/1065/separate-the-super-clafer-and-reference-type

C 10

abstract A
   b ->> C *

A1 : A

CC : C 5

AA : A
   b -> CC 3..10
// b : super.b -> CC 1..10